# blood-marble

./: .gitignore  CMakeLists.txt  README.md  main.cpp
teste com ppm/: main2.cpp
